find_package(Pangolin REQUIRED)
find_package(fmt REQUIRED)
message(STATUS "Pangolin_INCLUDE_DIRS dir: ${Pangolin_INCLUDE_DIRS}")
message(STATUS "Pangolin_LIBRARIES dir: ${Pangolin_LIBRARIES}")
include_directories(${Pangolin_INCLUDE_DIRS})
add_executable(trajectoryError trajectoryError.cpp)
target_link_libraries(trajectoryError ${Pangolin_LIBRARIES} fmt::fmt)
